# repo-stat

./: .cursorrules  .gitignore  README.md  pyproject.toml  repo-stat.spec
.github/workflows/: build.yml  ci.yml
src/repo_stat/: __main__.py  cli.py  formatter.py  github.py  models.py
tests/: test_cli.py  test_formatter.py  test_github.py  test_stats.py
